# sesame-tts

./: .env.example  .gitignore  README.md  REQUIREMENTS-streaming.md  REQUIREMENTS.md  audio_converter.py  com.burkestudio.sesame-tts.plist  config.py  elevenlabs_routes.py  errors.py  pyproject.toml  server.py  streaming.py  tts_engine.py  voice_presets.py
.claude/: settings.json
docs/: PRD-streaming.md  PRD-voice-loop.md  PRD.md  TRD-streaming.md  TRD-voice-loop.md  TRD.md
presets/: conversational.json  conversational_b.json
tests/: test_elevenlabs.py  test_engine.py  test_server.py
tests/voice_loop/: test_audio_capture.py  test_config.py  test_gateway_client.py  test_interrupt.py  test_loop.py  test_playback.py  test_sounds.py  test_state.py  test_transcriber.py  test_tts_client.py  test_vad.py
voice_loop/: __main__.py  audio_capture.py  config.py  default_config.yaml  gateway_client.py  hotkey.py  interrupt.py  loop.py  menu_bar.py  playback.py  sounds.py  state.py  transcriber.py  tts_client.py  vad.py
